test/error/ast/InfiniteCall.mod
MODULE InfiniteCall;
PROCEDURE P;
BEGIN
  P();
END P;
END InfiniteCall.
